--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,33 @@ env:
   BINARY: "R-Type"
 
 jobs:
+
+  build-on-ubuntu:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Build R-Type on Ubuntu (desktop)
+        run: |
+          mkdir build
+          cd build && cmake ..
+          cmake --build .
+      - name: Check Ubuntu build (desktop)
+        run: test -f r-type
+
+  build-on-windows:
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v1
+
+      - name: Build R-Type on Windows (desktop)
+        run: |
+          mkdir build && cd build
+          cmake .. -DCMAKE_BUILD_TYPE=Debug
+          cmake --build .
+      - name: Check Windows build (desktop)
+        run: Test-Path r-type
+
   clean_repo:
     name: Delete useless files
     runs-on: ubuntu-latest
