[ADD] Setting-up ECS

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,11 +1,16 @@
 set(INCROOT ${PROJECT_SOURCE_DIR}/include/)
 set(SRCROOT ${PROJECT_SOURCE_DIR}/src/)
+set(ECSROOT ${PROJECT_SOURCE_DIR}/src/ecs/)
 
 set(SRC
     ${SRCROOT}main.cpp
+    ${ECSROOT}Entity/Entity.cpp
 )
 
 set(INCDIRS
+    ${ECSROOT}Entity/Entity.hpp
+    ${ECSROOT}Component/IComponent.hpp
+    ${ECSROOT}System/ISystem.hpp
 )
 
 add_executable(${PROJECT_NAME} ${SRC})
