--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,8 +14,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: install SFML
         run: |
-          sudo apt install libsfml-dev
-          apt list --installed | grep -i sfml
+          sudo apt install libsfml-dev libboost-all-dev
       - name: build on Ubuntu
         run: |
           mkdir build
