--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,9 +28,9 @@ jobs:
   build-on-windows:
     runs-on: windows-latest
     steps:
-      - name: Check NuGet version
+      - name: install sfml
         run: |
-          which nuget
+          which dotnet
       - uses: actions/checkout@v1
       - name: build on Windows
         run: |
