--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
     steps:
       - name: install sfml
         run: |
-          .\vcpkg install sfml
+          ./vcpkg install sfml
       - uses: actions/checkout@v1
       - name: build on Windows
         run: |
