--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,22 +25,22 @@ jobs:
           test -f r-type_client
           test -f r-type_server
   
-  build-on-windows:
-    runs-on: windows-latest
-    steps:
-      - name: install sfml
-        run: |
-          vcpkg install sfml
-      - uses: actions/checkout@v1
-      - name: build on Windows
-        run: |
-          mkdir build && cd build
-          cmake .. -DCMAKE_BUILD_TYPE=Debug
-          cmake --build .
-      - name: check build
-        run: |
-          Test-Path r-type_client
-          Test-Path r-type_server
+#  build-on-windows:
+#    runs-on: windows-latest
+#    steps:
+#      - name: install sfml
+#        run: |
+#          vcpkg install sfml
+#      - uses: actions/checkout@v1
+#      - name: build on Windows
+#        run: |
+#          mkdir build && cd build
+#          cmake .. -DCMAKE_BUILD_TYPE=Debug
+#          cmake --build .
+#      - name: check build
+#        run: |
+#          Test-Path r-type_client
+#          Test-Path r-type_server
 
   clean-repo:
     runs-on: ubuntu-latest
