[ADD] libgl-dev dependency in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,10 +17,8 @@ jobs:
       #    sudo apt install libsfml-dev libboost-all-dev
       - name: install conan
         run: |
-          sudo apt install -y libudev-dev
+          sudo apt install -y libudev-dev libgl-dev
           sudo pip3 install conan
-      - name: is conan installed ?
-        run: which conan
       - name: build on Ubuntu
         run: bash install.sh
       - name: check build
