[UPD] Manuals libs to automated libs from conan in CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,8 +77,7 @@ set(SRC_CLIENT
 add_executable(r-type_client ${SRC_CLIENT})
 
 target_link_libraries(r-type_client
-			CONAN_PKG::boost
-			CONAN_PKG::sfml
+			${CONAN_LIBS}
 			)
 
 target_include_directories(r-type_client PUBLIC
@@ -97,8 +96,7 @@ set(SRC_SERVER
 add_executable(r-type_server ${SRC_SERVER})
 
 target_link_libraries(r-type_server
-			CONAN_PKG::boost
-			CONAN_PKG::sfml
+            ${CONAN_LIBS}
 			)
 
 target_include_directories(r-type_server PUBLIC
