--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
       #    sudo apt install libsfml-dev libboost-all-dev
       - name: install dependencies
         run: |
-          sudo apt install -y libudev-dev
+          sudo apt install -y libudev-dev libgl-dev
       - name: install conan
         run: |
           sudo pip3 install conan
