--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,10 @@ jobs:
           libxcb-sync-dev \
           libxcb-xfixes0-dev \
           libxcb-xinerama0-dev \
-          libxcb-dri3-dev
+          libxcb-dri3-dev \
+          libxcb-util-dev \
+          libxcb-util0-dev
+          sudo apt install -f
       - name: install conan
         run: |
           sudo pip3 install conan
