[ADD] Install conan on windows

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,6 +70,9 @@ jobs:
       #  run: |
       #    vcpkg install sfml
       - uses: actions/checkout@v3
+      - name: Install conan
+        run: |
+          sudo pip3 install conan
       - name: build on Windows
         run: |
           bash install.sh
