--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,6 +73,10 @@ jobs:
       - name: Install conan
         run: |
           pip3 install conan
+      - name: Get conan version
+        run: |
+          which conan
+          conan --version
       - name: build on Windows
         run: |
           bash install.sh
