--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,10 +11,6 @@ jobs:
   build-on-ubuntu:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      #- name: install SFML
-      #  run: |
-      #    sudo apt install libsfml-dev libboost-all-dev
       - name: install dependencies
         run: |
           sudo apt install -y \
@@ -53,6 +49,7 @@ jobs:
           libxcb-util-dev \
           libxcb-util0-dev
           sudo apt install -f
+      - uses: actions/checkout@v3
       - name: install conan
         run: |
           sudo pip3 install conan
@@ -66,29 +63,70 @@ jobs:
   build-on-windows:
     runs-on: windows-latest
     steps:
-      #- name: install sfml
-      #  run: |
-      #    vcpkg install sfml
-      - uses: actions/checkout@v3
       - name: Install conan
         run: |
           pip3 install conan
-      - name: Get conan version
-        run: |
-          which conan
-          conan --version
+      - uses: actions/checkout@v3
       - name: build on Windows
         run: |
           bash install.sh
-      #- name: build on Windows
-      #  run: |
-      #    mkdir build && cd build
-      #    cmake .. -DCMAKE_BUILD_TYPE=Debug
-      #    cmake --build .
       - name: check build
         run: |
           Test-Path r-type_client
           Test-Path r-type_server
+
+  build-on-arm:
+    runs-on: self-hosted
+    steps:
+      - name: install dependencies
+        run: |
+          sudo apt install -y \
+          libudev-dev \
+          libgl-dev \
+          libx11-xcb-dev \
+          libfontenc-dev \
+          libxaw7-dev \
+          libxcomposite-dev \
+          libxcursor-dev \
+          libxdamage-dev \
+          libxfixes-dev \
+          libxi-dev \
+          libxinerama-dev \
+          libxmu-dev \
+          libxmuu-dev \
+          libxpm-dev \
+          libxrandr-dev \
+          libxres-dev \
+          libxss-dev \
+          libxtst-dev \
+          libxv-dev \
+          libxvmc-dev \
+          libxxf86vm-dev \
+          libxcb-render-util0-dev \
+          libxcb-xkb-dev \
+          libxcb-icccm4-dev \
+          libxcb-image0-dev \
+          libxcb-keysyms1-dev \
+          libxcb-randr0-dev \
+          libxcb-shape0-dev \
+          libxcb-sync-dev \
+          libxcb-xfixes0-dev \
+          libxcb-xinerama0-dev \
+          libxcb-dri3-dev \
+          libxcb-util-dev \
+          libxcb-util0-dev
+          sudo apt install -f
+      - uses: actions/checkout@v2
+      - name: install conan
+        run: |
+          sudo apt install -y python3-pip
+          sudo pip3 install conan
+      - name: build on Ubuntu
+        run: bash install.sh
+      - name: check build
+        run: |
+          test -f r-type_client
+          test -f r-type_server
 
   clean-repo:
     runs-on: ubuntu-latest
