--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -114,7 +114,8 @@ jobs:
           libxcb-xinerama0-dev \
           libxcb-dri3-dev \
           libxcb-util-dev \
-          libxcb-util0-dev
+          libxcb-util0-dev \
+          cmake
           sudo apt install -f
       - uses: actions/checkout@v2
       - name: install conan
