--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,7 @@ jobs:
   build-on-ubuntu:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - name: build on Ubuntu amd64
         run: bash install.sh
       - name: check build
