--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,13 +3,9 @@ cmake_minimum_required(VERSION 3.17)
 project(r-type_client)
 project(r-type_server)
 
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++2a")
 
-if(MSVC)
-    add_compile_options(/W2)
-else()
-    add_compile_options("-Wall" "-Wextra" "-Wshadow" "-pedantic" "-Wpointer-arith")
-endif()
+set(CMAKE_CXX_STANDARD 20)
 
 set(INCROOT ${PROJECT_SOURCE_DIR}/include/)
 
@@ -24,6 +20,7 @@ set(ECSROOT ${SRCROOT}/ecs/)
 set(EVENTSROOT ${SRCCLIENT}/events/)
 set(GAMEROOT ${SRCCLIENT}/game/)
 set(SCREENSROOT ${SRCCLIENT}/screens/)
+set(TOOLSROOT ${SRCCLIENT}/tools/)
 
 set(SRC_ECS
     ${ECSROOT}Entity/Entity.cpp
@@ -56,6 +53,10 @@ set(SRC_SCREENS
     ${SCREENSROOT}IScreen.hpp
     ${SCREENSROOT}menu/MenuScreen.cpp
     ${SCREENSROOT}menu/MenuScreen.hpp
+    ${SCREENSROOT}options/OptionsScreen.cpp
+    ${SCREENSROOT}options/OptionsScreen.hpp
+    ${SCREENSROOT}multiplayer/MultiplayerScreen.cpp
+    ${SCREENSROOT}multiplayer/MultiplayerScreen.hpp
 )
 
 set(SRC_GAME
@@ -68,6 +69,11 @@ set(SRC_EVENTS
     ${EVENTSROOT}Events.hpp
 )
 
+set(SRC_TOOLS
+    ${TOOLSROOT}Tools.cpp
+    ${TOOLSROOT}Tools.hpp
+)
+
 set(SRC_CLIENT
     ${SRCCLIENT}main.cpp
     ${SRCCLIENT}network/client.cpp
@@ -76,19 +82,10 @@ set(SRC_CLIENT
     ${SRC_EVENTS}
     ${SRC_GAME}
     ${SRC_SCREENS}
+    ${SRC_TOOLS}
 )
 
 add_executable(r-type_client ${SRC_CLIENT})
-
-target_link_libraries(r-type_client
-    CONAN_PKG::boost
-    CONAN_PKG::sfml
-)
-
-target_include_directories(r-type_client PUBLIC
-    ${CONAN_INCLUDE_DIRS_BOOST}
-    ${CONAN_INCLUDE_DIRS_SFML}
-)
 
 set(SRC_SERVER
     ${SRCSERVER}main.cpp
@@ -100,17 +97,66 @@ set(SRC_SERVER
 
 add_executable(r-type_server ${SRC_SERVER})
 
-target_link_libraries(r-type_server
-    CONAN_PKG::boost
-    CONAN_PKG::sfml
+find_package(SFML 2.5.1 COMPONENTS system window graphics network audio REQUIRED)
+include_directories(${SFML_INCLUDE_DIRS})
+
+if(NOT DEFINED ASIO_SRC)
+    set(ASIO_SRC ${CMAKE_CURRENT_LIST_DIR})
+endif()
+
+set(ASIO_SRC_DEP "${ASIO_SRC}/asio")
+
+include(FetchContent)
+
+FetchContent_Declare(asio
+    GIT_REPOSITORY https://github.com/chriskohlhoff/asio.git
+    GIT_SHALLOW TRUE
+    SOURCE_DIR ${ASIO_SRC_DEP}
 )
 
-target_include_directories(r-type_server PUBLIC
-    ${CONAN_INCLUDE_DIRS_BOOST}
+FetchContent_GetProperties(asio)
+
+if(NOT asio_POPULATED)
+    if(EXISTS "${ASIO_SRC_DEP}/asio")
+        set(FETCHCONTENT_SOURCE_DIR_ASIO ${ASIO_SRC_DEP})
+    endif()
+    FetchContent_Populate(asio)
+endif()
+
+list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules)
+
+set_property(GLOBAL PROPERTY USE_FOLDERS TRUE)
+
+add_library(asio INTERFACE)
+
+target_include_directories(asio
+    INTERFACE ${asio_SOURCE_DIR}/asio/include
 )
 
-include(build/conanbuildinfo.cmake)
-conan_basic_setup(TARGETS)
+target_compile_definitions(asio
+    INTERFACE
+    ASIO_STANDALONE
+    ASIO_NO_DEPRECATED
+)
+
+set(Boost_USE_STATIC_LIBS OFF)
+set(Boost_USE_MULTITHREADED ON)
+set(Boost_USE_STATIC_RUNTIME OFF)
+find_package(Boost 1.70 COMPONENTS thread system REQUIRED)
+message(STATUS "Boost version: ${Boost_VERSION}")
+
+# This is needed if your Boost version is newer than your CMake version
+# or if you have an old version of CMake (<3.5)
+if(NOT TARGET Boost::filesystem)
+    add_library(Boost::filesystem IMPORTED INTERFACE)
+    set_property(TARGET Boost::filesystem PROPERTY
+        INTERFACE_INCLUDE_DIRECTORIES ${Boost_INCLUDE_DIR})
+    set_property(TARGET Boost::filesystem PROPERTY
+        INTERFACE_LINK_LIBRARIES ${Boost_LIBRARIES})
+endif()
+
+target_link_libraries(r-type_client sfml-system sfml-window sfml-graphics sfml-audio sfml-network -pthread)
+target_link_libraries(r-type_server sfml-system sfml-window sfml-graphics sfml-audio sfml-network -pthread -lboost_serialization)
 
 set_target_properties(r-type_client PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR})
 set_target_properties(r-type_server PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR})
