[FIX] uncoment missing lines

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -123,9 +123,9 @@ target_include_directories(r-type_server PUBLIC
 include(build/conanbuildinfo.cmake)
 conan_basic_setup(TARGETS)
 
-# list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules)
+list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules)
 
-# set_property(GLOBAL PROPERTY USE_FOLDERS TRUE)
+set_property(GLOBAL PROPERTY USE_FOLDERS TRUE)
 
 target_link_libraries(r-type_client sfml-system sfml-window sfml-graphics sfml-audio sfml-network -pthread)
 target_link_libraries(r-type_server sfml-system sfml-window sfml-graphics sfml-audio sfml-network -pthread -lboost_serialization)
