--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -128,5 +128,8 @@ target_link_libraries(r-type_server
 #target_link_libraries(r-type_client sfml-system sfml-window sfml-graphics sfml-audio sfml-network -pthread)
 #target_link_libraries(r-type_server sfml-system sfml-window sfml-graphics sfml-audio sfml-network -pthread -lboost_serialization)
 
+set_property(TARGET r-type_client PROPERTY MSVC_RUNTIME_LIBRARY "")
+set_property(TARGET r-type_server PROPERTY MSVC_RUNTIME_LIBRARY "")
+
 set_target_properties(r-type_client PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR})
 set_target_properties(r-type_server PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR})
