[FIX] read os-release instead

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,11 @@
-name: CI
+name: Actions
 
 on:
   [ workflow_dispatch, push, pull_request]
 
 jobs:
 
-  build-on-ubuntu:
+  build-on-ubuntu-amd64:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -27,7 +27,7 @@ jobs:
           Test-Path r-type_client
           Test-Path r-type_server
 
-  build-on-arm64:
+  build-on-debian-arm64:
     runs-on: self-hosted
     steps:
       - uses: actions/checkout@v3
