[REM] Useless code because we won't use archive anymore

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -132,8 +132,8 @@ target_link_libraries(r-type_server
 #list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules)
 #set_property(GLOBAL PROPERTY USE_FOLDERS TRUE)
 
-#target_link_libraries(r-type_client sfml-system sfml-window sfml-graphics sfml-audio sfml-network -pthread -lboost_serialization)
-#target_link_libraries(r-type_server sfml-system sfml-window sfml-graphics sfml-audio sfml-network -pthread -lboost_serialization)
+# target_link_libraries(r-type_client sfml-system sfml-window sfml-graphics sfml-audio sfml-network -pthread)
+# target_link_libraries(r-type_server sfml-system sfml-window sfml-graphics sfml-audio sfml-network -pthread)
 
 set_property(TARGET r-type_client PROPERTY MSVC_RUNTIME_LIBRARY "")
 set_property(TARGET r-type_server PROPERTY MSVC_RUNTIME_LIBRARY "")
