--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -54,8 +54,8 @@ jobs:
         shell: bash
         run: |
           ls -1
-          test -f r-type_client-${{env.build_name}}
-          test -f r-type_server-${{env.build_name}}
+          test -f r-type_client
+          test -f r-type_server
 
       - name: Rename build
         shell: bash
