--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,3 +22,9 @@ jobs:
 
       - name: Build
         run: bash install.sh
+
+      - name: Check build
+        shell: bash
+        run: |
+          test -f r-type_client
+          test -f r-type_server
