--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -49,13 +49,16 @@ jobs:
         shell: bash
         run: echo release_name=release-$(git rev-parse --short $GITHUB_SHA) >> $GITHUB_ENV
 
+      - name: Get release name (debug)
+        shell: bash
+        run: echo ${{env.release_name}}
+
       - name: Build
         run: bash install.sh
 
       - name: Check build
         shell: bash
         run: |
-          ls -1
           test -f r-type_client
           test -f r-type_server
 
