--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,15 @@ jobs:
       - name: Build
         run: bash install.sh
 
-      - name: Check build
+      - name: Check build (Windows)
+        if: matrix.os == 'windows-latest'
+        shell: bash
+        run: |
+          test -f r-type_client.exe
+          test -f r-type_server.exe
+
+      - name: Check build (!Windows)
+        if: matrix.os != 'windows-latest'
         shell: bash
         run: |
           test -f r-type_client
