[FIX] build name .exe windows

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -52,13 +52,29 @@ jobs:
       - name: Build
         run: bash install.sh
 
-      - name: Check build
+      - name: Check build (Windows)
+        if: matrix.os == 'windows-latest'
+        shell: bash
+        run: |
+          test -f r-type_client.exe
+          test -f r-type_server.exe
+
+      - name: Check build (!Windows)
+        if: matrix.os != 'windows-latest'
         shell: bash
         run: |
           test -f r-type_client
           test -f r-type_server
 
-      - name: Rename build
+      - name: Rename build (Windows)
+        if: matrix.os == 'windows-latest'
+        shell: bash
+        run: |
+          mv r-type_client.exe r-type_client-${{env.build_name}}
+          mv r-type_server.exe r-type_server-${{env.build_name}}
+
+      - name: Rename build (!Windows)
+        if: matrix.os != 'windows-latest'
         shell: bash
         run: |
           mv r-type_client r-type_client-${{env.build_name}}
